--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,17 @@
 ---
-# defaults file for ivansible.lin_terraform
+# defaults file for ivansible.dev_terraform
 
+terraform_version: latest
+terraform_allow_reinstall: no
+terraform_linux_binary: /usr/local/bin/terraform
+
+terraform_plugin_dir: ~/.terraform.d/plugins
+terraform_provisioner_ansible_repo_owner: radekg
+terraform_provisioner_ansible_version: v2.2.0
+terraform_provider_vultr_repo_owner: squat
+terraform_provider_vultr_version: v0.1.9
+
+terraform_plans_repo: ""
+terraform_plans_branch: master
+terraform_plans_dir: ~/devel/terraform
 ...
