--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -29,4 +29,20 @@
   when: "terraform_plans_repo != ''
          and 'permitted' in group_names"
   tags: dev_terraform_plans
+
+- name: setup terraform enterprise (free) token, if permitted
+  blockinfile:
+    path: ~/.terraformrc
+    create: yes
+    mode: 0600
+    block: |
+      credentials "app.terraform.io" {
+        token = "{{ terraform_api_token }}"
+      }
+      plugin_cache_dir   = "$HOME/.terraform.d/plugin-cache"
+      disable_checkpoint = true
+    marker: "# == {mark} terraform enterprise (free) =="
+  when: "terraform_api_token != ''
+         and 'permitted' in group_names"
+  tags: dev_terraform_api_token
 ...
