--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -10,6 +10,9 @@
       - LICENSE
       - README.md
     creates: "{{ terraform_allow_reinstall_plugins | ternary(omit, terraform_plugin_dir + '/terraform-provider-vultr_v' + terraform_provider_vultr_version) }}"
+  # fix intermittent network failures on .ru boxes
+  register: download_result
+  until: "'timed out' not in download_result.msg |default('')"
 
 - name: install plugin terraform-provisioner-ansible from tarball
   unarchive:
@@ -20,6 +23,8 @@
       - LICENSE
       - README.md
     creates: "{{ terraform_allow_reinstall_plugins | ternary(omit, terraform_plugin_dir + '/terraform-provisioner-ansible_v' + terraform_provisioner_ansible_version) }}"
+  register: download_result
+  until: "'timed out' not in download_result.msg |default('')"
   when: terraform_provisioner_ansible_is_tarball |bool
 
 - name: install plugin terraform-provisioner-ansible as binary
