--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,13 +1,13 @@
 ---
-# defaults file for ivansible.dev_terraform
-is_permitted: no
+# defaults for ivansible.dev_terraform
+is_permitted: false
 
 terraform_version: latest
-terraform_allow_reinstall_terraform: no
+terraform_allow_reinstall_terraform: false
 terraform_linux_binary: /usr/local/bin/terraform
 
 terraform_plugin_dir: "{{ ansible_user_dir }}/.terraform.d/plugins"
-terraform_allow_reinstall_plugins: no
+terraform_allow_reinstall_plugins: false
 terraform_provisioner_ansible_repo_owner: radekg
 terraform_provisioner_ansible_version: 2.2.1
 terraform_provisioner_ansible_is_tarball: false
