--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -1,10 +1,12 @@
 ---
 # configure permitted users for terraform
 
-- name: configure terraform aliases
+- name: configure terraform aliases (optional)
   lineinfile:
     path: ~/.local/bashrc/4alias.sh
     line: "alias {{ item }}"
+  # skip this step if ivansible.dev_user wasn't installed
+  ignore_errors: true
   loop:
     - "tf='terraform'"
     - "tfup='terraform apply -auto-approve'"
@@ -13,10 +15,26 @@
   tags: dev_terraform_aliases
 
 - name: bash completion for terraform
-  lineinfile:
-    path: ~/.local/bashrc/5completion.sh
-    line: "complete -C /usr/local/bin/terraform terraform"
+  block:
+    - name: user-local completion for terraform (will install globally if it fails)
+      lineinfile:
+        path: ~/.local/bashrc/5completion.sh
+        line: "complete -C {{ terraform_linux_binary }} terraform"
+      become: false
+  rescue:
+    # fall back if ivansible.dev_user wasn't installed
+    - name: system-global bash completion for terraform
+      copy:
+        dest: /etc/profile.d/completion_terraform.sh
+        content: |
+          # bash completion for HashiCorp Terraform
+          # ansible-managed
+          if [ -n "${BASH_VERSION-}" -a -n "${PS1-}" -a -n "${BASH_COMPLETION_VERSINFO-}" ]; then
+              complete -C {{ terraform_linux_binary }} terraform
+          fi
+      become: true
   tags: dev_terraform_completion
+
 
 - name: checkout terraform plans, if permitted
   git:
