--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -5,17 +5,17 @@
     release: "{{ terraform_version }}"
     strip_v: true
     template: https://releases.hashicorp.com/terraform/{ver}/terraform_{ver}_linux_amd64.zip
-    creates: "{{ terraform_linux_binary }}"
-    reinstall: "{{ terraform_allow_reinstall_terraform |bool }}"
-  register: latest_terraform_release
+    creates: "{{ terraform_binary }}"
+    reinstall: "{{ terraform_upgrade |bool }}"
+  register: _terraform_release
 
 - name: download archived terraform binary
   unarchive:
     remote_src: true
-    src: "{{ latest_terraform_release.url }}"
-    dest: "{{ terraform_linux_binary |dirname }}"
-  when: latest_terraform_release is changed
-  # fix intermittent network failures
-  register: download_result
-  until: "'timed out' not in download_result.msg |default('')"
+    src: "{{ _terraform_release.url }}"
+    dest: "{{ terraform_binary |dirname }}"
+  when: _terraform_release is changed
+  ## fix intermittent network failures
+  register: _terraform_download
+  until: _terraform_download.msg |default('') is not search('timed out')
 ...
