--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -24,7 +24,8 @@
     file_path: "{{ terraform_plugin_dir }}/{{ file_name }}"
   ## fix intermittent network failures
   register: _terraform_vultr_download
-  until: _terraform_vultr_download.msg |default('') is not search('timed out')
+  until: _terraform_vultr_download.msg |d('') is not search('timed out')
+  when: terraform_provider_vultr_repo_owner |d('')
 
 - name: install plugin terraform-provisioner-ansible (from tarball)
   unarchive:
@@ -51,7 +52,9 @@
   register: _terraform_ansible_download
   until: _terraform_ansible_download.msg |default('') is not search('timed out')
   ## choose between tarball and binary
-  when: terraform_provisioner_ansible_is_tarball |bool
+  when:
+    - terraform_provisioner_ansible_is_tarball |bool
+    - terraform_provisioner_ansible_repo_owner |d('')
 
 - name: install plugin terraform-provisioner-ansible (as binary)
   get_url:
@@ -64,5 +67,7 @@
     release_url: "{{ repo_url }}/releases/download/v{{ terraform_provisioner_ansible_version }}"
     web_file_name: "terraform-provisioner-ansible-linux-amd64_v{{ terraform_provisioner_ansible_version }}"
     disk_file_name: "terraform-provisioner-ansible_v{{ terraform_provisioner_ansible_version }}"
-  when: not terraform_provisioner_ansible_is_tarball |bool
+  when:
+    - not terraform_provisioner_ansible_is_tarball |bool
+    - terraform_provisioner_ansible_repo_owner |d('')
 ...
